--- a/sakthi/coverapp/static/book.html
+++ b/sakthi/coverapp/static/book.html
@@ -24,8 +24,10 @@
             </div>
             <br><br><br>
             <div class="id7">
-                <font class="color">SASH Publishers  </font><br><font>Price:</font><font class="color">$9.99</font>
-                <br>
+                <font class="color">SASH Publishers  </font>
+                <div class="price">
+                <font>Price:</font><font class="color">$9.99</font>
+                </div>
                 <font>Printed in USA</font>    
             </div>
         </div>
